# mipp_project

./: README.md  mipp_workspace.code-workspace
mipp_description/: CMakeLists.txt  package.xml
mipp_description/config/: husky_costmap_common.yaml  husky_costmap_global.yaml  husky_costmap_global_dynamic.yaml  husky_costmap_global_static.yaml  husky_costmap_local.yaml  husky_planner.yaml  husky_twist_mux.yaml  uav_costmap_common.yaml  uav_costmap_global.yaml  uav_costmap_local.yaml  uav_planner.yaml  uav_public_interface.yaml  uav_twist_mux.yaml
mipp_description/models/depth_camera_uav0/: depth_camera_uav0.sdf  model.config
mipp_description/models/depth_camera_uav1/: depth_camera_uav1.sdf  model.config
mipp_description/models/depth_camera_uav2/: depth_camera_uav2.sdf  model.config
mipp_description/models/iris/: iris.sdf
mipp_description/models/iris_depth_camera_uav0/: iris_depth_camera_uav0.sdf  model.config
mipp_description/models/iris_depth_camera_uav1/: iris_depth_camera_uav1.sdf  model.config
mipp_description/models/iris_depth_camera_uav2/: iris_depth_camera_uav2.sdf  model.config
mipp_description/models/iris_uav0/: iris_uav0.sdf  model.config
mipp_description/models/iris_uav1/: iris_uav1.sdf  model.config
mipp_description/models/iris_uav2/: iris_uav2.sdf  model.config
mipp_description/resource/: px4_config_uav0.yaml  px4_config_uav1.yaml  px4_config_uav2.yaml
mipp_description/urdf/: husky.urdf.xacro  wheel.urdf.xacro
mipp_description/urdf/accessories/: extras.urdf.xacro  kinect_camera.urdf.xacro  vlp.urdf
mipp_gazebo/: CMakeLists.txt  package.xml
mipp_gazebo/launch/: mipp_gazebo.launch
mipp_gazebo/worlds/: comconst_nowall_30x30.world  comconst_wall_30x30.world  disaster_60x60.world  empty_30x30.world  maze_30x30.world  maze_60x60.world  outdoor_60x60.world  playpen.world  scenario1  shapes_60x60.world  test.world
mipp_gazebo/worlds/sc1/: shapes_2.world
mipp_gazebo/worlds/sc2/: map_low.xcf  map_rand.pgm  shapes_1.world  shapes_1_map.pgm  shapes_1_map.yaml  shapes_2_high.world  shapes_2_low.world  shapes_2_low_map.yaml  shapes_2_map.pgm  shapes_2_map_rand_ill.pgm  shapes_2_map_rand_ill.xcf  shapes_2_map_rand_ill_w_legend.xcf  shapes_2_map_raw.pgm  shapes_2_rand.world  shapes_2_rand_map.yaml
mipp_launch/: CMakeLists.txt  package.xml
mipp_launch/bags/: sc2_path_1.bag  sc2_path_2.bag  sc2_path_3.bag  sc2_tour_1a.bag  sc2_tour_1b.bag  sc2_tour_1c.bag  sx2_path_1.bag
mipp_launch/launch/: husky.launch  mipp.launch  mipp_1ugv_1uav.launch  mipp_1ugv_2uav.launch  mipp_main.launch  mipp_sc2.launch  mipp_sc3.launch  octomap_mapping.launch  octomap_mapping_stamped.launch  uav.launch
mipp_launch/resource/: octomap_mapping_stamped_param.yaml
mipp_msgs/: CMakeLists.txt  package.xml
mipp_msgs/action/: Mipp.action  MoveVehicle.action  StartExploration.action  StartMipp.action
mipp_msgs/msg/: CommunicationState.msg  ExplorationPath.msg  ExplorationPose.msg  ExplorationResult.msg  MippMonitor.msg  MippMonitorVehicle.msg
mipp_msgs/srv/: StartMipp.srv  TakeoffComplete.srv
mipp_packages/: CMakeLists.txt  package.xml  path_1.bag  ugv_planner_plugin.xml
mipp_packages/include/: ExplorationPlanner.hpp  ExplorationServer.hpp  JointExplorer.hpp  MippPlanner.hpp  Node.hpp  RRTPlanner.hpp  UAVInformativeExplorer.hpp  UAVServer.hpp  UGVFrontierExplorer.hpp  UGVPlanner.hpp  UGVServer.hpp  utils.hpp
mipp_packages/launch/: exploration_planner.launch  exploration_server.launch  joint_explorer.launch  mipp_planner.launch  rrt_planner.launch  uav_informative_explorer.launch  uav_server.launch  ugv_frontier_explorer.launch  ugv_planner.launch  ugv_server.launch
mipp_packages/rviz/: playpen_octomap.bt  playpen_octomap_highres.bt  rrt_planner.rviz  ugv_planner.rviz
mipp_packages/src/: Node.cpp  RRTPlanner.cpp  RRTPlannerVisualization.cpp  UAVServer.cpp  UGVPlanner.cpp  UGVPlannerVisualization.cpp  UGVServer.cpp  ground_truth_handler_node.cpp  rrt_planner_node.cpp  uav_server_node.cpp  ugv_planner_node.cpp  utils.cpp
mipp_packages/src/common/: communication_constraint_visualizer_node.cpp  exploration_visualizer.cpp  mipp_monitor.cpp  mipp_visualizer.cpp  octomap_clearer_node.cpp  utils.cpp
mipp_packages/src/joint/: ExplorationPlanner.cpp  ExplorationServer.cpp  FormationReshapePlanner.cpp  JointExplorer.cpp  MippPlanner.cpp  UAVPlanner.cpp  UGVPlanner.cpp  exploration_planner_node.cpp  exploration_server_node.cpp  joint_explorer_node.cpp  mipp_planner_node.cpp
mipp_packages/src/other/: RRTPlanner.cpp  RRTPlannerVisualization.cpp
mipp_packages/src/uav/: UAVInformativeExplorer.cpp  UAVServer.cpp  uav_informative_explorer_node.cpp
mipp_packages/src/ugv/: UGVFrontierExplorer.cpp  UGVPlanner.cpp  UGVPlannerVisualization.cpp  UGVServer.cpp  UGVServerVisualization.cpp  ugv_frontier_explorer_node.cpp  ugv_server_node.cpp
mipp_viz/: CMakeLists.txt  package.xml
mipp_viz/rviz/: RViz_example_GUI.rviz  mipp_1ugv_1uav.rviz  mipp_1ugv_2uav.rviz  mipp_main.rviz  mipp_report_sc_grabber.rviz  mipp_uav.rviz  mipp_ugv.rviz  mipp_visualization.rviz  robot.rviz
